[package]
name = "pgmtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "env", "string"] }
users = "0.11"
postgres = "0.19.4"
chrono = "0.4.10"
crossbeam-channel = "0.5.6"
urlencoding = "2.1.2"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
async-trait = "0.1.59"
console = "0.15.2"
itertools = "0.10.5"
tabled = "0.10.0"
ryu = "1.0"
itoa = "1.0"
polars = { version = "0.26.1", features =["lazy", "temporal", "streaming", "fmt", "describe"] }

#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
